# 2022-tfg-cristian-sanchez

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
data extracted/12x12/center (5,5)/: bad_moves.csv  iterations.csv  times.csv
data extracted/12x12/corner (3,1)/: bad_moves.csv  iterations.csv  times.csv
data extracted/30x30/center (12,12)/: bad_moves.csv  iterations.csv  times.csv
data extracted/30x30/corner (5,3)/: bad_moves.csv  iterations.csv  times.csv
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/drone_assets/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/drone_circuit_assets/: .catkin  setup.sh
devel/.private/drone_wrapper/: .catkin  .rosinstall
devel/.private/jderobot_drones/: .catkin  local_setup.sh  setup.sh
devel/.private/libmavconn/: .catkin
devel/.private/mavros/: .catkin  .rosinstall
devel/.private/mavros_extras/: .catkin  .rosinstall  local_setup.sh
devel/.private/mavros_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/rqt_drone_teleop/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rqt_ground_robot_teleop/: .catkin
devel/.private/teleop/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/tello_driver/: .catkin  setup.sh
devel/.private/test_mavros/: .catkin
devel/include/heatmap_util/: DroneFrissAction.h  DroneFrissActionFeedback.h  DroneFrissActionGoal.h  DroneFrissActionResult.h  DroneFrissFeedback.h  DroneFrissGoal.h  DroneFrissResult.h  GetPowerFrissAction.h  GetPowerFrissActionFeedback.h  GetPowerFrissActionGoal.h  GetPowerFrissActionResult.h  GetPowerFrissFeedback.h  GetPowerFrissGoal.h  GetPowerFrissResult.h  RvizFrissAction.h  RvizFrissActionFeedback.h  RvizFrissActionGoal.h  RvizFrissActionResult.h  RvizFrissFeedback.h  RvizFrissGoal.h  RvizFrissResult.h  frissAction.h  frissActionFeedback.h  frissActionGoal.h  frissActionResult.h  frissFeedback.h  frissGoal.h  frissResult.h
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandAck.h  CommandAckRequest.h  CommandAckResponse.h  CommandBool.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  CommandTriggerInterval.h  CommandTriggerIntervalRequest.h  CommandTriggerIntervalResponse.h  CommandVtolTransition.h  CommandVtolTransitionRequest.h  CommandVtolTransitionResponse.h  CompanionProcessStatus.h  DebugValue.h  ESCInfo.h  ESCInfoItem.h  ESCStatus.h  ESCStatusItem.h  (+131 more)
devel/include/teleop/: Px4Cmd.h
devel/lib/heatmap_util/: button  friss.py  friss_simple_formula.py  heat  heatmap.py  paint_heatmap_rviz  path_marker.py  rf_data_server.py  rf_heatmap.py
devel/lib/mavros/: checkid  event_launcher  gcs_bridge  install_geographiclib_datasets.sh  mavcmd  mavftp  mavparam  mavros_node  mavsafety  mavsetp  mavsys  mavwp
devel/lib/mavros_extras/: servo_state_publisher  visualization
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  drone_assets.pc  drone_circuit_assets.pc  drone_wrapper.pc  heatmap_util.pc  irisdrone_gazebo.pc  libmavconn.pc  mavros.pc  mavros_extras.pc  mavros_msgs.pc  (+5 more)
docs/: _config.yml
docs/_pages/: about.md
docs/_posts/: 2022-03-26-1st_week.md  2022-04-19-2nd_week.md  2022-04-26-3rd_week.md  2022-07-29-1-3week.md  2022-08-1-teleoperation-1.md  2022-08-1-teleoperation-2.md  2022-10-10-teleoperation-3.md  2023-01-25-friss-model.md
logs/mavros/: build.make.000.log.stderr
logs/mavros_extras/: build.make.000.log.stderr
memoria/: anexo.tex  bibliografia.bib  estilo.tex  memoria.aux  memoria.bbl  memoria.blg  memoria.locode  memoria.lof  memoria.lot  memoria.out  memoria.tex  memoria.toc
memoria/capitulos/: capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex
memoria/portada/: acronimos.tex  agradecimientos.tex  portada.tex  resumen.tex
src/friss/: README.md  friss.py  friss_test.py  main.py  test.py
src/heatmap_util/: CMakeLists.txt  package.xml
src/heatmap_util/action/: DroneFriss.action  GetPowerFriss.action  RvizFriss.action
src/heatmap_util/config/: heatmap.rviz  heatmap.yaml
src/heatmap_util/launch/: rf_heatmap.launch
src/heatmap_util/rviz/: heatmap_rviz.rviz  manual_approach_rviz.rviz
src/heatmap_util/scripts/: friss.py  friss_simple_formula.py  heatmap.py  path_marker.py  rf_data_server.py  rf_heatmap.py  test.py
src/heatmap_util/src/: button.cpp  heat.cpp  paint_heatmap_rviz.cpp
src/irisdrone_gazebo/: CMakeLists.txt  package.xml
src/irisdrone_gazebo/launch/: irisdrone.launch
src/irisdrone_gazebo/models/chess_plane/: model.config  model.sdf
src/irisdrone_gazebo/models/chess_plane/materials/scripts/: chess_plane.material
src/irisdrone_gazebo/models/my_antenna/: antenna.sdf
src/irisdrone_gazebo/models/radio_tower/: model.sdf
src/irisdrone_gazebo/models/wall/: wall.sdf
src/irisdrone_gazebo/models/wall/materials/scripts/: repeated.material
src/irisdrone_gazebo/worlds/: irisdrone.world
src/teleop/: CMakeLists.txt  package.xml
src/teleop/launch/: algorithms.launch  c2c.launch  empty.launch  gz_tests.launch  manual_approach.launch  px4_example.launch  px4_rc.launch
src/teleop/models/: custom_iris.sdf
src/teleop/models/chess_floor/: model.config  model.sdf
src/teleop/models/chess_floor/materials/scripts/: chess_floor.material
src/teleop/models/custom_iris/: model.config
src/teleop/msg/: Px4Cmd.msg
src/teleop/scripts/: algorithms.py  c2c_control.py  manual_algorithm.py  plot_csv.py  pub.py  px4_controller.py  px4_example.py  radio_control.py  rc_controller.py  sub.py  test_cv.py  test_qt.py
src/teleop/world/: chess.world
(+794 files in other folders)
