<?xml version="1.0"?>
<package format="2">
  <name>heatmap_util</name>
  <version>0.0.0</version>
  <description>This package create a heatmap in rviz</description>
  <maintainer email="c.sanchezro.2018@alumnos.urjc.es">csanrod</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
