<?xml version="1.0"?>
<package format="2">
  <name>heatmap_util</name>
  <version>0.0.0</version>
  <description>This package create a heatmap in rviz</description>
  <maintainer email="c.sanchezro.2018@alumnos.urjc.es">csanrod</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_octomap</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_rviz_plugin</build_depend>
  <build_depend>grid_map_sdf</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>octomap_msgs</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>grid_map_core</build_export_depend>
  <build_export_depend>grid_map_cv</build_export_depend>
  <build_export_depend>grid_map_filters</build_export_depend>
  <build_export_depend>grid_map_loader</build_export_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_octomap</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>grid_map_rviz_plugin</build_export_depend>
  <build_export_depend>grid_map_sdf</build_export_depend>
  <build_export_depend>grid_map_visualization</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>



  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_cv</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>grid_map_loader</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_octomap</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>grid_map_sdf</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <message_generation></message_generation>
  </export>

  
  
</package>
