<?xml version="1.0"?>
<package format="2">
  <name>irisdrone_gazebo</name>
  <version>0.0.0</version>
  <description>This package is to store gazebo utils for the TFG apps</description>
  <maintainer email="c.sanchezro.2018@alumnos.urjc.es">csanrod</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
