<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>This package create a teleoperation functionality for PX4 drone in gazebo</description>
  <maintainer email="c.sanchezro.2018@alumnos.urjc.es">csanrod</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
</package>
